--- a/tarea2_info183.ipynb
+++ b/tarea2_info183.ipynb
@@ -12968,7 +12968,7 @@
    "source": [
     "**Discutir efectividad filtro C**\n",
     "\n",
-    "Podemos ver en ambos gráficos de la resta que pudimos efectivamente disminuir parte del rudio blanco usando el filtro rechaza bandas."
+    "Podemos ver en ambos gráficos de la resta que pudimos efectivamente disminuir parte del rudio blanco usando el filtro pasabajo, quedan fuera en el gráfico de amplitud la mayoria del ruido aleatorio."
    ]
   },
   {
@@ -16927,7 +16927,7 @@
    "source": [
     "**Describa los filtros IIR y compárelo con los filtros FIR. Describa los argumentos y el valor de retorno de la función \"scipy.signal.iirfilter\"**\n",
     "\n",
-    "Los filtros IIR (respuesta infinita al impulso) se podrían decir que son una versión más avanzada de los FIR, y como su nombre lo indica la diferencia esta en su duración en el dominio de tiempo. Mientraz que un FIR es finito y eventualmente tendera a 0, el IIR usa recursión para poder seguir operando infinitamente, usando sus salidas como entradas para las siguientes operaciones.\n",
+    "Los filtros IIR (respuesta infinita al impulso) se podrían decir que son una versión más avanzada de los FIR, al igual que ellos son un tipo de filtro usado para el procesamiento de señales, y como su nombre lo indica la diferencia esta en su duración en el dominio de tiempo. Mientraz que un FIR es finito y eventualmente tendera a 0, el IIR usa recursión para poder seguir operando infinitamente, usando sus salidas como entradas para las siguientes operaciones, y tiene dos grupos de coeficientes: los coeficientes \"b\" o del numerador, que afecta los valores de entreda de la señal, y coeficientes \"a\" o del denominador, que afectan los inputs provenientes del mismo filtro, que usa recursivamente.\n",
     "\n",
     "**Describa los argumentos y el valor de retorno de la función \"scipy.signal.iirfilter\"**\n",
     "\n",
